--- a/toolchain/source/CMakeLists.txt
+++ b/toolchain/source/CMakeLists.txt
@@ -35,5 +35,6 @@ target_include_directories("${PROJECT_NAME}" PUBLIC
 )
 
 target_link_libraries("${PROJECT_NAME}" PUBLIC common)
+target_link_libraries("${PROJECT_NAME}" PUBLIC diagnostics)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
